# beam_machine

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/: tractor_beam.glb  welder_beam.glb
assets/blocks/: cursor.glb  deco_structure.glb  deco_structure_2.glb  deco_structure_input.glb  deco_structure_output.glb  remove_cursor.glb  structure.glb  tractor_beam_source.glb  welder_beam_source.glb
assets/levels/: 0.level.txt  1.level.txt  10.level.txt  2.level.txt  3.level.txt  4.level.txt  5.level.txt  6.level.txt  9.level.txt
assets/shaders/: hologram.wgsl
preassets/: blocks.blend  icons.blend  menu.blend
src/: animations.rs  block.rs  hologramify.rs  interface.rs  main.rs  setup.rs  setup_complete.rs  setup_menu.rs  simulation.rs  startup.rs  structure.rs  world.rs
src/interface/: base.rs  keys.rs  mouse.rs  setup.rs  util.rs
src/world/: base.rs  parts.rs  setup.rs
