[package]
edition = "2021"
name = "beam_machine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8.0", features = ["dynamic"]}
bevy_mod_raycast = "0.6.0"
bevy_obj = "0.8.0"

[profile.dev.package."*"]
opt-level = 3
